--- a/angular/projects/communication-ctp/src/app/child/child.component.html
+++ b/angular/projects/communication-ctp/src/app/child/child.component.html
@@ -1,5 +1,5 @@
 <div style="border: 1px solid black;height: 200px;width: 200px;">
 <p>child works!</p>
-<button (click)="fun()">Click me</button>
-<input type="text" [(ngModel)]="inp" (input)="fun()">
+ <button (click)="childFun()">Click child</button>
+ <button (click)="incr()">Counter</button>
 </div>
