--- a/angular/projects/communication-ip/src/app/app.component.html
+++ b/angular/projects/communication-ip/src/app/app.component.html
@@ -4,6 +4,7 @@
     <h1>I'm App Component</h1>
     <input type="text" [(ngModel)]="inp">
     <br>
+    {{inp}}
     <input type="text" [(ngModel)]="inp2">
     {{inp2}}
   </div>
