--- a/angular/projects/communication-ctp/src/app/app.component.html
+++ b/angular/projects/communication-ctp/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div style="border: 1px solid black;height: 300px;width: 300px;">
   <!-- how do you access DOM elements in angular , template reference variables -->
-  <h1 #chitti>I'm App Component</h1>
-  <app-child (myEvent)="fun2($event)" #mychild></app-child>
-  {{mychild.count}}
-  <button (click)="mychild.counter()">click parent</button>
+ <h1>Parent Component</h1>
+ <app-child (myEvent)="parentFun($event)" #c></app-child>
+ {{c.count}}
+ <button (click)="parentFun2()">counter</button>
+ {{message}}
 </div>
