--- a/angular/projects/template-form/src/app/app.component.html
+++ b/angular/projects/template-form/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
   <h1>Main Component</h1>
   <h2>Template Form:</h2>
-    <form action="" #myForm="ngForm">
+    <form action="" #myForm="ngForm" (ngSubmit)="submit(myForm)">
      <input type="text" ngModel name="name" #n="ngModel" placeholder="Enter the name" minlength="4" required>
        <p *ngIf="myForm.form.controls?.['name']?.['touched'] && n.errors?.['required']" class="err-msg">The input value is required</p>
        <p class="err-msg" *ngIf="n.touched && n.errors?.['minlength']">The minimum length is 4 characters</p>
@@ -13,7 +13,7 @@
      <p *ngIf="e.touched && e.errors?.['required']">Email is Required</p>
      <br>
      <input type="password" ngModel name="password" #p="ngModel" placeholder="Enter the Password"><br><br>
-      <button (click)="submit(n,p,e,myForm)">Submit</button>
+      <button>Submit</button>
     </form>
 </div>
 <div id="display" style=" height: 200px;width: 200px; border: 1px solid black;">
