--- a/angular/projects/reactive-form/src/app/app.component.html
+++ b/angular/projects/reactive-form/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div>
   <h1>Reactive Form</h1>
-  <form action="" [formGroup]="myForm">
+  <form action="" [formGroup]="myForm" (ngSubmit)="submit()">
     <input type="text" id="un" placeholder="Enter the name" formControlName="username"><br><br>
-    <p *ngIf="myForm.controls['username'].hasError('required')">The email is required</p>
+    <p *ngIf="myForm.controls['username'].hasError('required')">The name is required</p>
     <input type="email" placeholder="Enter the Email" id="en" formControlName="email">
     <input type="password" placeholder="Enter the password" id="pwd" formControlName="password">
+    <input type="password" placeholder="Enter the password again" id="pwd" formControlName="confirmPassword">
     <button>Submit</button>
   </form>
 </div>
