--- a/Ecommerce/src/app/header/header.component.html
+++ b/Ecommerce/src/app/header/header.component.html
@@ -5,5 +5,5 @@
         <li><a routerLink="./about">About</a></li>
         <li><a routerLink="./contact">Contact</a></li>
     </ul>
-    <button><i class="fa-solid fa-cart-shopping"></i><span>{{count}}</span></button>
+    <a routerLink="/cart"><button><i class="fa-solid fa-cart-shopping"></i><span style="color: white;">{{count}}</span></button></a>
 </header>
