--- a/Ecommerce/src/app/not-found/not-found.component.html
+++ b/Ecommerce/src/app/not-found/not-found.component.html
@@ -1,1 +1,1 @@
-<p>not-found works!</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRA019LFPVaDyWb_BvL1GtJASzlbKEyD4aFlt4y-LLkquInz47POpmNbEsuVv9DlppAH7E&usqp=CAU" alt="not found">
