--- a/Ecommerce/src/app/app.component.html
+++ b/Ecommerce/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header [count]="c"></app-header>
-<router-outlet (cartAdd)="add()"></router-outlet>
+<app-header></app-header>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
